# brewr

./: Cargo.toml  README.md
src/: args.rs  brew.rs  command_line.rs  config.rs  diagnostics.rs  lib.rs  main.rs  system.rs  table.rs
src/brew/: json.rs  result.rs  style.rs
src/system/: pipe.rs
