[package]
name = "brewr"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Eisberg <https://github.com/iceman>"]
homepage = "https://github.com/iceman/brewr"
description = "Better `brew update` with desc of new formulae/casks"
license = "MIT"
keywords = ["brew", "homebrew", "descriptions"]
readme = "README.md"

[badges]
coveralls = { repository = "https://github.com/iceman/brewr", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# codegen-units = 1
# lto = true
# panic = "abort"

[lib]
name = "brewr"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.15", features = ["derive"] }
tabled = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
