[package]
name = "brewr"
version = "0.3.0"
edition = "2024"
authors = ["Andrew Eisberg <https://github.com/iceman>"]
repository = "https://github.com/iceman/brewr"
description = "Better `brew update` with desc of new formulae/casks"
license = "MIT"
keywords = ["brew", "homebrew", "descriptions"]
readme = "README.md"
rust-version = "1.88.0"

[badges]
coveralls = { repository = "https://github.com/iceman/brewr", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# codegen-units = 1
# lto = true
# panic = "abort"

[lib]
name = "brewr"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tabled = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
